# lintmax-rs

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.github/scripts/: prune-ci-runs.sh  prune-old-releases.sh
.github/workflows/: ci.yml  release.yml
configs/: CLAUDE.md  ci.yml  clippy.toml  deny.toml  dprint.json  gitignore  release.yml  rustfmt.toml
src/: analyze.rs  comment.rs  dprint.rs  main.rs  staleness.rs  state.rs
