[package]
name = "cargo-lintmax"
version = "0.0.8"
categories = ["development-tools"]
edition = "2024"
keywords = ["linting", "clippy", "strict", "pipeline"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/1qh/lintmax-rs"
description = "Maximum strictness Rust pipeline in one command"

[[bin]]
name = "cargo-lintmax"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
